# vtktests

./: .gitignore  CMakeLists.txt  QT-VTKtest.files
VTKMolecule/: VTKMolecule.files
VTKMolecule (copy)/: VTKMoleculeCopy.files
VTKMolecule/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  moleculreader.cpp  moleculreader.h
VTKVolume/: VTKVolume.files
VTKVolume/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  moleculreader.cpp  quitbutton.cpp  quitbutton.h
src/vtk-qt/: vtk-qt.pro
